Refactorings for additional JMH tests